overflow bug fix

--- a/src/style/components/ShowcaseImageWrapper.scss
+++ b/src/style/components/ShowcaseImageWrapper.scss
@@ -82,7 +82,7 @@
 // animaiton
 @keyframes left_side_3D {
   0% {
-    transform: rotateY(-1deg) scaleX(0.92);
+    transform: rotateY(-2deg) scaleX(0.92);
   }
   100% {
     transform: rotateY(0deg) scaleX(1);
@@ -94,6 +94,6 @@
     transform: rotateY(0deg) scaleX(1);
   }
   100% {
-    transform: rotateY(1deg) scaleX(0.92);
+    transform: rotateY(2deg) scaleX(0.92);
   }
 }
